# edureka-rust

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
advanced-rust-programming/mod2/concurrency-threads-atomic/: Cargo.toml
advanced-rust-programming/mod2/concurrency-threads-atomic/src/: main.rs
advanced-rust-programming/mod2/concurrency-threads-mutex/: Cargo.toml
advanced-rust-programming/mod2/concurrency-threads-mutex/src/: main.rs
advanced-rust-programming/mod3/optimizing-computational-performance-find-max/: Cargo.toml
advanced-rust-programming/mod3/optimizing-computational-performance-find-max/benches/: find_max_benchmark.rs
advanced-rust-programming/mod3/optimizing-computational-performance-find-max/src/: lib.rs  main.rs
advanced-rust-programming/mod3/optimizing-computational-performance-find-max/src/multi_threaded/: mod.rs  threaded.rs
advanced-rust-programming/mod3/optimizing-computational-performance-find-max/src/single_threaded/: mod.rs  simdargmaxcrate.rs  simdpulpcrate.rs
web-development-with-rust/mod1/rocket-first/: .env  Cargo.toml  diesel.toml
web-development-with-rust/mod1/rocket-first/src/: main.rs  models.rs  mycounterfairing.rs
web-development-with-rust/mod2/actix-api-1/: Cargo.toml
web-development-with-rust/mod2/actix-api-1/src/: main.rs
web-development-with-rust/mod2/check-transaction-sample/: Cargo.toml
web-development-with-rust/mod2/check-transaction-sample/src/: main.rs
web-development-with-rust/mod2/rocket-with-serde/: Cargo.toml
web-development-with-rust/mod3/websocket/: Cargo.toml
(+4 files in other folders)
