[workspace]
resolver = "2"
members = [ "advanced-rust-programming/mod2/concurrency-threads-atomic","advanced-rust-programming/mod2/concurrency-threads-mutex", "advanced-rust-programming/mod3/optimizing-computational-performance-find-max", "web-development-with-rust/mod1/rocket-first", "web-development-with-rust/mod2/actix-api-1", "web-development-with-rust/mod2/check-transaction-sample", "web-development-with-rust/mod2/rocket-with-serde", "web-development-with-rust/mod3/websocket"]
