[package]
name = "optimizing-computational-performance-find-max"
version = "0.1.0"
edition = "2021"

[dependencies]
argminmax = { version = "0.6.2", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "find_max_benchmark"
harness = false
